src/client/snapshots/rustypipe__client__music_playlist__tests__map_music_album_description.snap
---
source: src/client/music_playlist.rs
expression: map_res.c
---
MusicAlbum(
  id: "MPREb_PiyfuVl6aYd",
  playlist_id: Some("OLAK5uy_k-Bi6NLrq5DrDKPLuiRvm7NsbMccKIcEY"),
  name: "25",
  cover: [
    Thumbnail(
      url: "https://lh3.googleusercontent.com/LRj9RZOKcS7PrG-NvXKnwSekCqXNWMItrnuF6WXmr3MeujS1HxqjiATe6H5HCM6-hoHNYncjmlIovaaH=w60-h60-l90-rj",
      width: 60,
      height: 60,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/LRj9RZOKcS7PrG-NvXKnwSekCqXNWMItrnuF6WXmr3MeujS1HxqjiATe6H5HCM6-hoHNYncjmlIovaaH=w120-h120-l90-rj",
      width: 120,
      height: 120,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/LRj9RZOKcS7PrG-NvXKnwSekCqXNWMItrnuF6WXmr3MeujS1HxqjiATe6H5HCM6-hoHNYncjmlIovaaH=w226-h226-l90-rj",
      width: 226,
      height: 226,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/LRj9RZOKcS7PrG-NvXKnwSekCqXNWMItrnuF6WXmr3MeujS1HxqjiATe6H5HCM6-hoHNYncjmlIovaaH=w544-h544-l90-rj",
      width: 544,
      height: 544,
    ),
  ],
  artists: [
    ArtistId(
      id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      name: "Adele",
    ),
  ],
  artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
  description: Some("25 is the third studio album by English singer-songwriter Adele, released on 20 November 2015 by XL Recordings and Columbia Records. The album is titled as a reflection of her life and frame of mind at 25 years old and is termed a \"make-up record\". Its lyrical content features themes of Adele \"yearning for her old self, her nostalgia\", and \"melancholia about the passage of time\" according to an interview with the singer by Rolling Stone, as well as themes of motherhood and regret. In contrast to Adele\'s previous works, the production of 25 incorporated the use of electronic elements and creative rhythmic patterns, with elements of 1980s R&B and organs. Like when recording 21, Adele worked with producer and songwriter Paul Epworth and Ryan Tedder, along with new collaborations with Max Martin and Shellback, Bruno Mars, Greg Kurstin, Danger Mouse, the Smeezingtons, Samuel Dixon, and Tobias Jesso Jr.\n25 received generally positive reviews from music critics, who commended its production and Adele\'s vocal performance.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/25_(Adele_album)) under Creative Commons Attribution CC-BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0/legalcode)"),
  album_type: Album,
  year: Some(2015),
  by_va: false,
  tracks: [
    TrackItem(
      id: "YQHsXMglC9A",
      name: "Hello",
      duration: Some(296),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: true,
      track_nr: Some(1),
      by_va: false,
    ),
    TrackItem(
      id: "fk4BbF7B29w",
      name: "Send My Love (To Your New Lover)",
      duration: Some(224),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: true,
      track_nr: Some(2),
      by_va: false,
    ),
    TrackItem(
      id: "z7NEG3SGZ_g",
      name: "I Miss You",
      duration: Some(349),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(3),
      by_va: false,
    ),
    TrackItem(
      id: "a1IuJLebHgM",
      name: "When We Were Young",
      duration: Some(291),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(4),
      by_va: false,
    ),
    TrackItem(
      id: "-fsCc7Be1H0",
      name: "Remedy",
      duration: Some(246),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(5),
      by_va: false,
    ),
    TrackItem(
      id: "l8djdhhFuxo",
      name: "Water Under the Bridge",
      duration: Some(241),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(6),
      by_va: false,
    ),
    TrackItem(
      id: "Qiu59lZShCo",
      name: "River Lea",
      duration: Some(226),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(7),
      by_va: false,
    ),
    TrackItem(
      id: "-hzFTJDJGkQ",
      name: "Love in the Dark",
      duration: Some(286),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(8),
      by_va: false,
    ),
    TrackItem(
      id: "Db9ciJPIaEU",
      name: "Million Years Ago",
      duration: Some(228),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(9),
      by_va: false,
    ),
    TrackItem(
      id: "jb5g4UFHmfQ",
      name: "All I Ask",
      duration: Some(272),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(10),
      by_va: false,
    ),
    TrackItem(
      id: "1kZsaRkVEUY",
      name: "Sweetest Devotion",
      duration: Some(252),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
          name: "Adele",
        ),
      ],
      artist_id: Some("UCRw0x9_EfawqmgDI2IgQLLg"),
      album: Some(AlbumId(
        id: "MPREb_PiyfuVl6aYd",
        name: "25",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(11),
      by_va: false,
    ),
  ],
  variants: [],
)
