src/client/snapshots/rustypipe__client__music_playlist__tests__map_music_album_single.snap
---
source: src/client/music_playlist.rs
expression: map_res.c
---
MusicAlbum(
  id: "MPREb_bHfHGoy7vuv",
  playlist_id: Some("OLAK5uy_kdSWBZ-9AZDkYkuy0QCc3p0KO9DEHVNH0"),
  name: "Der Himmel reißt auf",
  cover: [
    Thumbnail(
      url: "https://lh3.googleusercontent.com/sfYeIuiLljpCsDLSooCOkNON1jZwHsEui3fD1FnLSyCMYjLCPQtEgy4_6qBmSGOz3eNWyS-aW4WcZMo8=w60-h60-l90-rj",
      width: 60,
      height: 60,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/sfYeIuiLljpCsDLSooCOkNON1jZwHsEui3fD1FnLSyCMYjLCPQtEgy4_6qBmSGOz3eNWyS-aW4WcZMo8=w120-h120-l90-rj",
      width: 120,
      height: 120,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/sfYeIuiLljpCsDLSooCOkNON1jZwHsEui3fD1FnLSyCMYjLCPQtEgy4_6qBmSGOz3eNWyS-aW4WcZMo8=w226-h226-l90-rj",
      width: 226,
      height: 226,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/sfYeIuiLljpCsDLSooCOkNON1jZwHsEui3fD1FnLSyCMYjLCPQtEgy4_6qBmSGOz3eNWyS-aW4WcZMo8=w544-h544-l90-rj",
      width: 544,
      height: 544,
    ),
  ],
  artists: [
    ArtistId(
      id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
      name: "Joel Brandenstein",
    ),
    ArtistId(
      id: Some("UCFTcSVPYRWlDoHisR-ZKwgw"),
      name: "Vanessa Mai",
    ),
  ],
  artist_id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
  description: None,
  album_type: Single,
  year: Some(2020),
  by_va: false,
  tracks: [
    TrackItem(
      id: "XX0epju-YvY",
      title: "Der Himmel reißt auf",
      duration: Some(183),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
          name: "Joel Brandenstein",
        ),
        ArtistId(
          id: Some("UCFTcSVPYRWlDoHisR-ZKwgw"),
          name: "Vanessa Mai",
        ),
      ],
      artist_id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
      album: Some(AlbumId(
        id: "MPREb_bHfHGoy7vuv",
        name: "Der Himmel reißt auf",
      )),
      view_count: None,
      is_video: true,
      track_nr: Some(1),
    ),
  ],
  variants: [],
)
