src/client/snapshots/rustypipe__client__music_playlist__tests__map_music_album_various_artists.snap
---
source: src/client/music_playlist.rs
expression: map_res.c
---
MusicAlbum(
  id: "MPREb_8QkDeEIawvX",
  playlist_id: Some("OLAK5uy_mEX9ljZeeEWgTM1xLL1isyiGaWXoPyoOk"),
  name: "＜Queendom2＞ FINAL",
  cover: [
    Thumbnail(
      url: "https://lh3.googleusercontent.com/Imv7uGEOmI-jpyxbRv1Yk9sajaZMxzK2zs3bQuu9W9FyXmiVrPEZ8F7NsY-DCxDwDGIzBNDRGossSi2KVA=w60-h60-l90-rj",
      width: 60,
      height: 60,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/Imv7uGEOmI-jpyxbRv1Yk9sajaZMxzK2zs3bQuu9W9FyXmiVrPEZ8F7NsY-DCxDwDGIzBNDRGossSi2KVA=w120-h120-l90-rj",
      width: 120,
      height: 120,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/Imv7uGEOmI-jpyxbRv1Yk9sajaZMxzK2zs3bQuu9W9FyXmiVrPEZ8F7NsY-DCxDwDGIzBNDRGossSi2KVA=w226-h226-l90-rj",
      width: 226,
      height: 226,
    ),
    Thumbnail(
      url: "https://lh3.googleusercontent.com/Imv7uGEOmI-jpyxbRv1Yk9sajaZMxzK2zs3bQuu9W9FyXmiVrPEZ8F7NsY-DCxDwDGIzBNDRGossSi2KVA=w544-h544-l90-rj",
      width: 544,
      height: 544,
    ),
  ],
  artists: [],
  album_type: Single,
  year: Some(2022),
  by_va: true,
  tracks: [
    TrackItem(
      id: "8IqLxg0GqXc",
      title: "Waka Boom (My Way) (feat. Lee Young Ji)",
      duration: 274,
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "HYOLYN",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(1),
    ),
    TrackItem(
      id: "9WYpLYAEub0",
      title: "AURA",
      duration: 216,
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "WJSN",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(2),
    ),
    TrackItem(
      id: "R48tE237bW4",
      title: "THE GIRLS (Can’t turn me down)",
      duration: 239,
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCAKvDuIX3m1AUdPpDSqV_3w"),
          name: "Kep1er",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(3),
    ),
    TrackItem(
      id: "-UzsoR6z-vg",
      title: "Red Sun!",
      duration: 254,
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "VIVIZ",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(4),
    ),
    TrackItem(
      id: "kbNVyn8Ex28",
      title: "POSE",
      duration: 187,
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "LOONA",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(5),
    ),
    TrackItem(
      id: "NJrQZUzWP5Y",
      title: "Whistle",
      duration: 224,
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "Brave Girls",
        ),
      ],
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(6),
    ),
  ],
  variants: [],
)
